# perso-2026a-sofiatonetto

./: Cadastro.hs  Database.hs  Dockerfile  Horario.hs  Main.hs  README.md  TestMyFunctions.hs  TestMyFunctionsh.hs  bolsistas.cabal  cadastro.hs  css.css  docker-compose.yml  index.html  producaoBD.sql  render.yaml  script.js  style.css
.devcontainer/: devcontainer.json
