cabal-version:      2.4
name:               bolsistas
version:            0.1.0.0

executable bolsistas
  main-is:          Main.hs
  other-modules:
      Cadastro
    , Horario
    , Database
  build-depends:
      base
    , scotty
    , postgresql-simple
    , aeson
    , wai-extra
    , text
    , scientific
    , split
    , bytestring
  default-language: Haskell2010